[gd_scene load_steps=27 format=3 uid="uid://cioywqf88c361"]

[ext_resource type="Script" uid="uid://01hqhfvnj0rw" path="res://scripts/main.gd" id="1_jyhfs"]
[ext_resource type="Texture2D" uid="uid://dvi6tgp04enhk" path="res://art/cooking-pancake.png" id="2_0wfyh"]
[ext_resource type="Texture2D" uid="uid://vugt4sf4akg5" path="res://art/background.png" id="2_85g3d"]
[ext_resource type="Texture2D" uid="uid://pmc1w0ep0eyn" path="res://art/table.png" id="3_85g3d"]
[ext_resource type="Texture2D" uid="uid://6ysaflkcfdef" path="res://art/new-pancake.png" id="3_jyhfs"]
[ext_resource type="Texture2D" uid="uid://dbgrdfroksbf2" path="res://art/trash-can.png" id="3_o6xl0"]
[ext_resource type="Script" uid="uid://dy1vkj8kjgt5u" path="res://scripts/pancake.gd" id="3_tefeu"]
[ext_resource type="Texture2D" uid="uid://b4x2kct1fy8bu" path="res://art/no-smoke-pan.png" id="4_eb6dy"]
[ext_resource type="Texture2D" uid="uid://b3hquqfqj1n5d" path="res://art/new-pancake-pressed.png" id="4_tbgi4"]
[ext_resource type="Texture2D" uid="uid://crysvub2lhlxy" path="res://art/plate.png" id="4_tefeu"]
[ext_resource type="Texture2D" uid="uid://dyjndghht8dpt" path="res://art/explosion.png" id="5_ya4ey"]
[ext_resource type="Theme" uid="uid://knaokeguk46g" path="res://art/theme.tres" id="10_choun"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jbj1t"]
atlas = ExtResource("4_eb6dy")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_muem4"]
atlas = ExtResource("4_eb6dy")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbgi4"]
atlas = ExtResource("2_0wfyh")
region = Rect2(0, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_tefeu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbj1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muem4")
}],
"loop": true,
"name": &"cooking",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbgi4")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tefeu"]
radius = 57.0
height = 308.0

[sub_resource type="AtlasTexture" id="AtlasTexture_eb6dy"]
atlas = ExtResource("5_ya4ey")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_trceg"]
atlas = ExtResource("5_ya4ey")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8y0u"]
atlas = ExtResource("5_ya4ey")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkv2x"]
atlas = ExtResource("5_ya4ey")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya4ey"]
atlas = ExtResource("5_ya4ey")
region = Rect2(640, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_muem4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb6dy")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_trceg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8y0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkv2x")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ya4ey")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tipki"]
radius = 23.0
height = 206.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbgi4"]
size = Vector2(262, 63)

[sub_resource type="CircleShape2D" id="CircleShape2D_85g3d"]
radius = 31.4006

[node name="main" type="Node2D"]
script = ExtResource("1_jyhfs")

[node name="background" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 0.000265992
scale = Vector2(4, 4)
texture = ExtResource("2_85g3d")
centered = false

[node name="table" type="Sprite2D" parent="."]
top_level = true
texture_filter = 1
position = Vector2(585, 500)
scale = Vector2(6, 6)
texture = ExtResource("3_85g3d")

[node name="pan" type="Node2D" parent="."]
top_level = true
position = Vector2(770, 415)

[node name="pan_anim" type="AnimatedSprite2D" parent="pan"]
texture_filter = 1
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_tefeu")
animation = &"idle"
frame_progress = 0.166003

[node name="StaticBody2D" type="StaticBody2D" parent="pan"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pan/StaticBody2D"]
position = Vector2(-35, 79)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tefeu")

[node name="explosion" type="AnimatedSprite2D" parent="pan"]
texture_filter = 1
position = Vector2(-40, 20)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_muem4")
frame = 4
frame_progress = 1.0
speed_scale = 3.5

[node name="trash" type="Node2D" parent="."]
top_level = true
position = Vector2(125, 560)

[node name="Sprite2D" type="Sprite2D" parent="trash"]
texture_filter = 1
scale = Vector2(6, 6)
texture = ExtResource("3_o6xl0")

[node name="trash_area" type="Area2D" parent="trash"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="trash/trash_area"]
position = Vector2(0, 40)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tipki")

[node name="plate" type="CharacterBody2D" parent="."]
top_level = true
position = Vector2(375, 515)
input_pickable = true
script = ExtResource("3_tefeu")

[node name="sprites" type="Node2D" parent="plate"]

[node name="plate_sprite" type="Sprite2D" parent="plate/sprites"]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("4_tefeu")
region_enabled = true
region_rect = Rect2(14.9611, 69.0422, 68.7708, 18.4985)

[node name="CollisionShape2D" type="CollisionShape2D" parent="plate"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_tbgi4")

[node name="Area2D" type="Area2D" parent="plate"]
collision_layer = 2
collision_mask = 2

[node name="customer_accept" type="CollisionShape2D" parent="plate/Area2D"]
shape = SubResource("CircleShape2D_85g3d")

[node name="new_pancake" type="TextureButton" parent="."]
top_level = true
texture_filter = 1
offset_left = 966.0
offset_top = 557.0
offset_right = 1083.0
offset_bottom = 621.0
rotation = -0.000175953
texture_normal = ExtResource("3_jyhfs")
texture_pressed = ExtResource("4_tbgi4")
stretch_mode = 0

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("10_choun")

[node name="Panel" type="Panel" parent="ui"]
layout_mode = 0
offset_top = 650.0
offset_right = 1163.0
offset_bottom = 700.0
rotation = -0.00314913

[node name="timer" type="Label" parent="ui"]
texture_filter = 1
clip_contents = true
custom_minimum_size = Vector2(50, 60)
layout_direction = 2
layout_mode = 1
anchors_preset = -1
offset_left = 40.0
offset_top = 655.0
offset_right = 362.0
offset_bottom = 715.0
theme = ExtResource("10_choun")
text = "time left: $$:##"

[node name="happy" type="Label" parent="ui"]
layout_mode = 0
offset_left = 680.0
offset_top = 655.0
offset_right = 1130.0
offset_bottom = 710.0
text = "satisfied customers: 0"
metadata/_edit_use_anchors_ = true

[node name="game_timer" type="Timer" parent="ui"]

[connection signal="body_entered" from="trash/trash_area" to="." method="_on_trash_area_body_entered"]
[connection signal="pressed" from="new_pancake" to="." method="_on_new_pancake_pressed"]
